# logos-test-modules

./: README.md  flake.nix
.github/workflows/: ci.yml
test-basic-module/: CMakeLists.txt  flake.nix  metadata.json  module.yaml
test-basic-module-cpp/: CMakeLists.txt  metadata.json
test-basic-module-cpp/src/: test_basic_module_cpp_impl.cpp  test_basic_module_cpp_impl.h
test-basic-module/src/: test_basic_module_interface.h  test_basic_module_plugin.cpp  test_basic_module_plugin.h
test-context-module-cpp/: CMakeLists.txt  metadata.json
test-context-module-cpp/src/: test_context_module_cpp_impl.cpp  test_context_module_cpp_impl.h
test-dummy-module/: CMakeLists.txt  flake.nix  metadata.json
test-dummy-module/src/: dummy_module_000000_impl.cpp  dummy_module_000000_impl.h  dummy_module_000000_loader.h  metadata.json
test-extlib-module/: CMakeLists.txt  flake.nix  metadata.json  module.yaml
test-extlib-module/lib/: libstrutil.c  libstrutil.h
test-extlib-module/src/: test_extlib_module_interface.h  test_extlib_module_plugin.cpp  test_extlib_module_plugin.h
test-ipc-module/: CMakeLists.txt  flake.nix  metadata.json  module.yaml
test-ipc-module-new-api/: CMakeLists.txt  metadata.json  module.yaml
test-ipc-module-new-api/src/: metadata.json  test_ipc_new_api_impl.cpp  test_ipc_new_api_impl.h  test_ipc_new_api_loader.h
test-ipc-module-new-api/tests/: CMakeLists.txt  logos_test.h  main.cpp  test_call_basic.cpp  test_call_extlib.cpp  test_chaining.cpp
test-ipc-module/src/: test_ipc_module_interface.h  test_ipc_module_plugin.cpp  test_ipc_module_plugin.h
test-ipc-module/tests/: CMakeLists.txt  logos_test.h  test_call_basic.cpp  test_call_extlib.cpp  test_chaining.cpp
test-qml-backend-module/: CMakeLists.txt  metadata.json
test-qml-backend-module/src/: test_qml_backend.rep  test_qml_backend_interface.h  test_qml_backend_plugin.cpp  test_qml_backend_plugin.h
test-qml-backend-module/src/qml/: Main.qml
test-qml-only-module/: Main.qml  metadata.json
test-thread-safety/: CMakeLists.txt  dummy_module_generator.h  test_thread_safety.cpp
tests/: run_tests.sh
